[package]
name = "what-is-my-ip"
version = "0.3.0"
edition = "2021"

[lib]
name = "what_is_my_ip"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.93"
jiff = "0.1.15"
clap = { version = "4.5.21", features = ["derive"] }
reqwest = "0.12.9"
tokio = { version = "1.41.1", features = ["macros", "rt"] }
